--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ pnpm-lock.yaml
 
 # .DS_Store is only for Mac users
 **/.DS_Store
+
+# render database stuff for vscode
+.vscode
+cse340render.session.sql
